# Training-Django

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/middleware/: log_requests.py
api/migrations/: 0001_initial.py
api/views/: __init__.py  post_detail.py  post_io.py  post_list.py  post_stats.py
ex/: settings.py  urls.py
